--- a/ybk/templates/user/trade_account.html
+++ b/ybk/templates/user/trade_account.html
@@ -766,7 +766,7 @@
   }
 
   var quote_updater; 
-  function update_quote(symbol) {
+  function update_quote() {
     // 定时刷新盘口信息
     if (symbol) {
       $.post(
@@ -842,7 +842,7 @@
   function update_buy_sell(value) {
     // 更新可买卖状态
     symbol = value;
-    update_quote(symbol);
+    update_quote();
   }
 
   var select_buy_symbol, select_sell_symbol;
@@ -854,7 +854,7 @@
         select_sell_symbol.setValue(value);
         if (!quote_updater) {
           update_buy_sell(value);
-          quote_updater = setInterval(function() { update_quote(value) }, 3000);
+          quote_updater = setInterval(function() { update_quote() }, 3000);
         }
       }
     }
@@ -869,7 +869,7 @@
         select_buy_symbol.setValue(value);
         if (!quote_updater) {
           update_buy_sell(value);
-          quote_updater = setInterval(function() { update_quote(value) }, 3000);
+          quote_updater = setInterval(function() { update_quote() }, 3000);
         }
       }
     }
