better description text

--- a/ybk/templates/user/trade_account.html
+++ b/ybk/templates/user/trade_account.html
@@ -727,8 +727,8 @@
           '<th style="padding:5px;">名称</th>' + 
           '<th class="text-right" style="padding:5px;">代码</th>' +
           '<th class="text-right" style="padding:5px;">买/卖</th>' +
-          '<th class="text-right" style="padding:5px;">价格</th>' +
-          '<th class="text-right" style="padding:5px;">现价</th>' + 
+          '<th class="text-right" style="padding:5px;">成本价</th>' +
+          '<th class="text-right" style="padding:5px;">成交价</th>' + 
           '<th class="text-right" style="padding:5px;">数量</th>' + 
           '</tr></thead>' + 
           '<tbody>';
