--- a/zg/templates/layout.html
+++ b/zg/templates/layout.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
 
-    <title>中港邮币卡抢单系统-用户汇总</title>
+    <title>中港邮币卡跌零系统-用户汇总</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{{ url_for('static', filename='bower_components/bootstrap/dist/css/bootstrap.min.css') }}" rel="stylesheet">
